# forecasting-ms

./: .env.template  .gitignore  README.md  dockerfile  pyproject.toml
app/: settings.py
app/api/: main.py
app/constants/: events.py  messages.py
app/domain/entities/: forecast.py
app/domain/forecasting/: forecast_adapter.py  model.py  sales_adapter.py
app/domain/value_objects/: sales_data.py
app/drivers/: main.py
app/drivers/event_bus/: event_bus_factory.py  nats_event_bus_service.py
app/drivers/rest/routes/: health.py
app/entrypoints/: main.py
app/entrypoints/event_bus/: event_bus_factory.py  nats_event_bus_service.py
app/entrypoints/event_bus/interface/: event_bus_provider.py
app/entrypoints/subpub/: trigger_forecast.py
app/infrastructure/data/adapters/: sales_data_adapter.py
app/infrastructure/data/sales_data/: in_memory_repository.py  nats_messaging_repository.py  sales_repository_factory.py
app/infrastructure/logs/: uvicorn_logger.py
app/service/messaging/dto/: sales_dto.py
app/use_cases/: forecast_use_case.py
app/use_cases/interfaces/: logger.py  sales_data_provider.py
app/use_cases/mappers/: forecast_mapper.py
tests/: conftest.py
tests/domain/entities/: test_forecast.py
tests/domain/forecasting/: test_forecast_adapter.py  test_model.py  test_sales_adapter.py
tests/domain/value_objects/: test_sales_data.py
tests/drivers/dto/: test_sales_dto.py
tests/infrastructure/data/sales_data/: test_nats_messaging_repository.py
tests/mock_data/: mock_sales_data.py
tests/use_cases/: test_forecast_use_case.py
(+1 files in other folders)
